--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -26,8 +26,9 @@
 }
     
 .swiper {
-    width: 1200px;
-    height: 420px;
+    // padding:120px 116px;
+    max-width: 1200px;
+    height: 500px;
     border-color: red;
     &-slide{
         // background-color: black;
@@ -72,13 +73,20 @@
         background: red;
       }
 
+      .swiper-button-prev,
+      .swiper-button-next{
+        color:red;
+        // fill: red;
+      }
+
 
     .customer-reviews {
+        // padding: 120px 0px 0px 0px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        // width: max-content;
+        max-width: 1200px;
     }
     
     .customer-reviews__image {
@@ -90,10 +98,11 @@
     }
     
     .customer-reviews__text-container {
+        // width:280px;
         background-color: #fafafa;
         margin-top: 32px;
         margin-bottom: 16px;
-        padding: 43px 50px 17px 50px;
+        padding: 32px 20px 16px 20px;
     
     
     }
@@ -104,14 +113,14 @@
         line-height: 31px;
         color: black;
         text-align: center;
-        // background-image: repeating-linear-gradient(to top,
-        //         var(--quotation-svg-color),
-        //         var(--quotation-svg-color) 1px,
-        //         transparent 1px,
-        //         transparent 32px);
         text-indent: 10px;
         position: relative;
         z-index: 4;
+        background-image: repeating-linear-gradient(to top,
+        #e1e1e1,
+        #e1e1e1 1px,
+            transparent 1px,
+            transparent 32px);
     
         &::before {
             content: url("/src/images/testimonials/quotes.svg");
@@ -123,6 +132,7 @@
     }
     
     .red-dots-container {
+        // padding: 20px 0px 0px 0px;
         display: inline-flex;
         gap: 10px;
         margin-bottom: 16px;
@@ -136,56 +146,29 @@
     }
     
     .reviewer-name {
+        margin:0px;
+        padding-bottom: 0px;
         font-weight: 500;
         line-height: 1.85;
         color: black;
     }
     
-    .customer-reviews-btns {
-        margin-top: 16px;
-        display: flex;
-        gap: 18px;
-    }
-    
-    .review-btn {
-        height: 12px;
-        width: 12px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-        border-color: transparent;
-        background-color:  #d9d9d9;
-        border-color: transparent;
-    
-        &:hover {
-            cursor: pointer;
-        }
-    }
-    
-    .btn-selected {
-        background-color: transparent;
-        position: relative;
-    }
-    
-    .review-btn__selected {
-        position: absolute;
-        fill: #d31342;
-    
-        &:hover {
-            cursor: pointer;
-        }
-    }
     
     @media screen and (min-width: 768px) {
+        .swiper{
+            max-width: 1200px;
+            height: 650px;
+            padding-top: 60px;
+        }
         .customer-reviews {
-            padding-bottom: 60px;
+            // padding-bottom: 60px;
             padding-left: 74px;
             padding-right: 74px;
         }
     
         .customer-reviews__text-container {
+            // width: 620px;
+            height: 164px;
             margin-top: 20px;
             margin-bottom: 4px;
         }
@@ -200,16 +183,23 @@
         }
     
         .reviewer-name {
+            padding:0px;
             font-size: 16px;
         }
     }
     
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
+
+        .swiper{
+            max-width: 1200px;
+            max-height: 530px;
+        }
         .customer-reviews {
             padding: 60px 116px;
         }
     
         .customer-reviews__text-container {
+            // width:968px;
             margin-top: 16px;
             margin-bottom: 16px;
         }
