--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -1,5 +1,5 @@
 <!-- Slider main container -->
-<div class="swiper">
+<div class="swiper container">
     <!-- Additional required wrapper -->
 
     <div class="swiper-wrapper">
@@ -7,16 +7,16 @@
       <div class="swiper-slide">
         
         <section class="customer-reviews container" id="testimonials">
-          <div class="customer-reviews__image">
-            <img
+          <div class="customer-reviews__image" >
+            <img 
             id="person-image"
               src="/src/images/testimonials/testimonials1.png"
               alt="first testmionial person image"
             />
           </div>
   
-          <div class="customer-reviews__text-container">
-            <div class="container-text">
+          <div class="customer-reviews__text-container" >
+            <div class="container-text" >
               <p class="underline-text" id="person-review">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
@@ -25,10 +25,10 @@
             </div>
           </div>
   
-          <div class="red-dots-container">
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
+          <div class="red-dots-container" >
+            <div class="red-dot" data-swiper-parallax="-5000"></div>
+            <div class="red-dot" data-swiper-parallax="-15000"></div>
+            <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
           <p class="reviewer-name" id="person-name">Emily, Los Angeles</p>
         </section>
@@ -56,10 +56,10 @@
             </div>
           </div>
   
-          <div class="red-dots-container">
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
+          <div class="red-dots-container" >
+            <div class="red-dot" data-swiper-parallax="-5000"></div>
+            <div class="red-dot" data-swiper-parallax="-15000"></div>
+            <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
           <p class="reviewer-name" id="person-name">Anna, Vaslui</p>
         </section>
@@ -87,10 +87,10 @@
             </div>
           </div>
   
-          <div class="red-dots-container">
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
-            <div class="red-dot"></div>
+          <div class="red-dots-container" >
+            <div class="red-dot" data-swiper-parallax="-5000"></div>
+            <div class="red-dot" data-swiper-parallax="-15000"></div>
+            <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
           <p class="reviewer-name" id="person-name">Sarah, Bacau</p>
         </section>
@@ -101,11 +101,11 @@
     <div class="swiper-pagination"></div>
   
     <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <!-- <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
   
     <!-- If we need scrollbar -->
-    <!-- <div class="swiper-scrollbar"></div> -->
-  </div>
+    <!-- <div class="swiper-scrollbar"></div>
+  </div> -->
 
   
