--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -10,7 +10,7 @@
           <li><a class="header__item" href="#home">About us</a></li>
           <li><a class="header__item" href="#about">How it’s made?</a></li>
           <li><a class="header__item" href="#products">Our products</a></li>
-          <li><a class="header__item" href="#locations">Contact</a></li>
+          <li><a class="header__item" href="#location">Contact</a></li>
         </ul>
       </nav>
         <button class="header__menu-btn" type="button">
@@ -36,7 +36,7 @@
               <a class="hero__link" href="#products"><button class="hero__btn" type="button">Products </button></a>
           </div>
           <div>
-              <a class="hero__link hero__link--red" href="#advantages"><button class="hero__btn hero__btn--white" type="button">How it’s made?</button></a> 
+              <a class="hero__link hero__link--red" href="#about"><button class="hero__btn hero__btn--white" type="button">How it’s made?</button></a> 
           </div>
         </div>
           <div class="info">
