--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -56,7 +56,7 @@
                                         <button data-modal-open class="about-modal-button button" type="button">
                                             Read more
                                             <svg width="4.4" height="8">
-                                                <use href="images/icons-svg.svg#icon-btn-arrow"</use>
+                                                <use href="images/icons-svg.svg#icon-btn-arrow"/>
                                             </svg>
                                         </button>
                                     </li>
