--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -1,5 +1,5 @@
 <!-- Slider main container -->
-<div class="swiper container">
+<div class="swiper container" id="carusel">
     <!-- Additional required wrapper -->
 
     <div class="swiper-wrapper">
