--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -40,6 +40,7 @@
   padding: 43px 20px;
   background-color: white;
   border-radius: 24px;
+  margin-top:60px;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   animation: color 4s infinite alternate linear;
   @keyframes color {
@@ -72,6 +73,7 @@
   @media screen and (min-width: 1200px) {
    width: 368px;
    padding: 51px 43px 62px;
+     margin-top:-95px;
   }
  }
 
