--- a/src/partials/advantages-section.html
+++ b/src/partials/advantages-section.html
@@ -1,26 +1,22 @@
-<!-- advantages-section -->
-<section class="advantages"> 
-  <!-- adavantages -->
-  <div class="advantages__container container">
+<section class="advantages">
+  <div class="container">
     <h2 hidden class="advantages__title">Advantages</h2>
     <ul class="advantages__list unstyled-list">
-      <!-- advantages__list-item si urmatorul este modificator advantages__list-item--mod1-->
-      <li class="advantages__item advantages__1-item">
-        <!-- adavantages__list-text -->
-        <p class="advantages__text">
-          <span class="advantages__number">721</span>
+      <li class="advantages__list-item advantages__list-item--mod1">
+        <p class="advantages__list-text">
+          <span class="advantages__list-number">721</span>
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advantages__item advantages__2-item">
-        <p class="advantages__text">
-          <span class="advantages__number">16kg</span>
+      <li class="advantages__list-item advantages__list-item--mod2">
+        <p class="advantages__list-text">
+          <span class="advantages__list-number">16kg</span>
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="advantages__item advantages__3-item">
-        <p class="advantages__text">
-          <span class="advantages__number">84</span>
+      <li class="advantages__list-item advantages__list-item--mod3">
+        <p class="advantages__list-text">
+          <span class="advantages__list-number">84</span>
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
