--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -365,6 +365,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border: 3px solid $secondary-color;
+  border-radius: 10px;
 }
 .form {
   display: flex;
@@ -484,6 +485,7 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     border: 3px solid $secondary-color;
+    border-radius: 10px;
   }
   &__button-close {
     display: flex;
@@ -827,6 +829,7 @@
     &__inner {
       width: 528px;
       height: 581px;
+      border-radius: 10px;
     }
   }
   .form {
