--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,8 +1,8 @@
 <section class="gallery">
-    <div class="gallery-container">
-        <h2 class="gallery-title">Ice-cream's gallery</h2>
-        <ul class="gallery-list">
-            <li class="gallery-list__column-1">
+    <div class="gallery__container">
+        <h2 class="gallery__title">Ice-cream's gallery</h2>
+        <ul class="gallery__list">
+            <li class="gallery__list-column-1">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -13,12 +13,12 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic11.jpg 1x, ./images/home-pic11-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-1" 
+                <img class="gallery__list-pictures picture-1" 
                     src="./images/home-pic11.jpg" 
                     alt="" >
                 </picture>
             </li>
-            <li class="gallery-list__column-2">
+            <li class="gallery__list-column-2">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -29,7 +29,7 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic21.jpg 1x, ./images/home-pic21-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-2" 
+                <img class="gallery__list-pictures picture-2" 
                     src="./images/home-pic21.jpg"
                      alt="">
                 </picture>
@@ -43,12 +43,12 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic22.jpg 1x, ./images/home-pic22-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-3" 
+                <img class="gallery__list-pictures picture-3" 
                     src="./images/home-pic22.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery-list__column-3">
+            <li class="gallery__list-column-3">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -59,7 +59,7 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic31.jpg 1x, ./images/home-pic31-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-4" 
+                <img class="gallery__list-pictures picture-4" 
                     src="./images/home-pic31.jpg" 
                     alt="">
                 </picture>
@@ -73,12 +73,12 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic32.jpg 1x, ./images/home-pic32-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-5" 
+                <img class="gallery__list-pictures picture-5" 
                     src="./images/home-pic32.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery-list__column-4">
+            <li class="gallery__list-column-4">
                 <picture>
                     <source 
                         media="screen and (max-width:767px)" 
@@ -89,7 +89,7 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic41.jpg 1x, ./images/home-pic41-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-6" 
+                <img class="gallery__list-pictures picture-6" 
                     src="./images/home-pic41.jpg" 
                     alt="">
                 </picture>
@@ -103,12 +103,12 @@
                     <source 
                         media="screen and (min-width:1200px)" 
                         srcset="./images/home-pic42.jpg 1x, ./images/home-pic42-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-7" 
+                <img class="gallery__list-pictures picture-7" 
                     src="./images/home-pic42.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery-list__column-5">
+            <li class="gallery__list-column-5">
                 <picture>
                 <source 
                     media="screen and (max-width:767px)" 
@@ -119,7 +119,7 @@
                 <source 
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic51.jpg 1x, ./images/home-pic51-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-8" 
+                <img class="galler__list-pictures picture-8" 
                     src="./images/home-pic51.jpg" 
                     alt="">
                 </picture>
@@ -133,12 +133,12 @@
                 <source 
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic52.jpg 1x, ./images/home-pic52-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-9" 
+                <img class="gallery__list-pictures picture-9" 
                     src="./images/home-pic52.jpg" 
                     alt="">
                 </picture>
             </li>
-            <li class="gallery-list__column-6">
+            <li class="gallery__list-column-6">
                <picture>
                 <source 
                     media="screen and (max-width:767px)" 
@@ -149,7 +149,7 @@
                 <source 
                     media="screen and (min-width:1200px)" 
                     srcset="./images/home-pic61.jpg 1x, ./images/home-pic61-@2x.jpg 2x" />
-                <img class="gallery-list__pictures picture-10" 
+                <img class="gallery__list-pictures picture-10" 
                     src="./images/home-pic61.jpg" 
                     alt="">
                </picture>
