--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
-@use "../sass/vars.scss";
-@use "../sass/common";
+// @use "../sass/vars.scss";
+// @use "../sass/common";
 @use "../sass/modal.scss";
 @use "../sass/mobile.scss";
 @use "../sass/hero-header.scss";
