--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import './components/footer';
 @import './components/buy-now-modal';
 @import './components/swiper';
+@import './components/mobile-menu';
 
 // @import Swiper, { Navigation, Pagination } from 'swiper';
 // @import 'swiper/css';
