--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -14,7 +14,11 @@
     background-image: url("../images/header/header-icecream@2x.jpg"), url("../images/header/header-elipse@2x.png");
   }
 }
+.menu-container {
+  display: none;
+}
   .header {
+    position: relative;
     display: flex;
     align-items: center;
     padding-top: 37px;
@@ -71,7 +75,7 @@
     &__menu-btn {
       background-color: transparent;
       border:none;
-      visibility: hidden;
+      display:none;
     }
   }
 
@@ -105,6 +109,7 @@
     }
   
     &__btn {
+      color:#ffffff;
       display: flex;
       align-items: center;
       text-align: center;
@@ -115,6 +120,7 @@
     }
   
     &__btn--white {
+      color:#D41443;
       background: #ffffff;
       &:hover,
       &:focus {
@@ -181,8 +187,6 @@
     }
    }
   }
-  
-  
   .sell-point {
     list-style: none;
     display: flex;
@@ -222,8 +226,6 @@
     }
   }
 @media (max-width: 768px) and (min-width: 320px) {
-.no-display{
- display:none;
   }
   .header-section {
     padding: 0 16px;
@@ -233,7 +235,6 @@
     background-position:  top 50% right 57%, top 60% right 43%;
     padding: 0 32px;
   }
-  
   @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
@@ -243,9 +244,13 @@
     background-image: url("../images/header/header-icecream-t@2x.png"), url("../images/header/elipse-t@2x.png");
   }
 }
+.menu-toggle,
+  .menu-container {
+    visibility: inherit; 
+  } 
 .header {
 &__menu-btn {
-  visibility: inherit;
+  display: inherit;
   margin-right: -270px;
 }
 &__btn-icon {
@@ -312,4 +317,12 @@
     right:0;
   }
 }
+@media (max-width: 320px) {
+  .hero__img,
+  .sell-point,
+  .info,
+  .no-display {
+    display:none;
+  }
+
 }
