--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -88,17 +88,17 @@
     <ul class="contacts-list-btn unstyled-list">
         <li class="contacts-list-btn__item ">
             <span class="btn-container bounce">
-            <button class="contacts-list-btn__item-locations"  type="button"> <span class="bounce">Our Locations
+            <button class="contacts-list-btn__item-locations"  type="button"> <span class="bounce"></span>Our Locations
                 <svg class="contacts-list-btn__locations-icon">
                     <use href="./images/sprite.svg#icon-Vector-1"></use>
-                </svg></span>
-            </button>
+                </svg>
+            </button></span>
         </li>
         <li class="contacts-list-btn__item ">
-            <button class="contacts-list-btn__item-franchise" type="button"><span class="bounce">Franchise
+            <button class="contacts-list-btn__item-franchise" type="button">Franchise
                 <svg class="contacts-list-btn__franchise-icon">
                     <use href="./images/sprite.svg#icon-Vector-1"></use>
-                </svg></span>
+                </svg>
             </button>
         </li>
     </ul>
