--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -33,6 +33,11 @@ body {
   fill: #d41443;
 }
 
+.arrow-button--mod {
+width: 26px;
+height: 26px;
+}
+
 .unstyled-list {
   list-style: none;
   padding-left: 0;
@@ -45,7 +50,9 @@ body {
 
 .about__content-button .bounce:focus,
 .arrow-button .bounce:focus,
-.contacts-list-btn__item-franchise .bounce:focus {
+.contacts-list-btn__item-franchise .bounce:focus,
+.hero__btn-type-first .bounce:focus,
+  .hero__btn-type-second .bounce:focus {
   animation-name: bounce-left;
   animation-duration: 1s;
   animation-timing-function: ease;
@@ -67,7 +74,10 @@ body {
   .about__content-button .bounce:hover,
   .arrow-button .bounce:hover,
   .contacts-list-btn__item-locations .bounce:hover,
-  .contacts-list-btn__item-franchise .bounce:hover
+  .contacts-list-btn__item-franchise .bounce:hover,
+  .btn-nav .bounce:hover,
+  .hero__btn-type-first .bounce:hover,
+  .hero__btn-type-second .bounce:hover
   {
     animation-name: bounce-left;
     animation-duration: 1s;
