--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -12,40 +12,7 @@
 </head>
 
 <body>
- <!-- <label class="modal__form-item"> 
-                        <p class="modal__text">Name</p> 
-                        <input class="modal__input-dimensions" name="name" type="text" required> 
-                        
-                    </label> -->
-    <div class="modal is-hidden" data-modal> 
-        <div class="modal__div"> 
-            <button class="modal__close-button-position" data-modal-close> 
-                <svg class="modal__close-button"> 
-                    <use href="/src/images/icons-svg-how.svg#icon-X"></use>
-                    
-                </svg>
-            </button>
-            <div class="modal__elements"> 
-                <h3 class="modal__title">More information about how is made </h3> 
-                <form name="modal__contact-form" class="modal__contact-form"> 
-
-
-                   
-
-
-                    <label class="modal__form-item">
-                        <p class="modal__text">Comments</p>
-                        <textarea class="modal__textarea" name="Comments" placeholder="Enter the text" cols="10"
-                            rows="10"></textarea> 
-                    </label>
-                    
-                    <button type="submit" class="modal__button-submit">Send</button> 
-                </form>
-            </div>
-        </div>
-    </div>
-
-
+    
 
     <main>
 
@@ -74,13 +41,24 @@
                         <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie
                             tortor. <br> Nam vel justo cursus, faucibus lorem eget, egestas eros. <br> Maecenas eleifend erat at
                             justo fringilla.</p>
+
+                            <div class="made-section__background-container">
+                                
+
+                            </div>
+
+                            <!-- <img class="made-section__background" src="/src/images/made-background-M-1x.png" alt=""> -->
                         <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel
                             pellentesque odio <br> elementum. Mauris rhoncus orci in imperdiet placerat. <br> Vestibulum euismod
                             nisl suscipit ligula volutpat, a feugiat urna <br> maximus. Cras massa nibh, tincidunt. <br>
                         </p>
                         <p class="made-section__text made-section__text--text3">Aliquam erat volutpat. Aenean accumsan.</p>
         
-                        <button data-modal-open class="made-section__button" type="button">Read more &nbsp;
+                        <div class="how-button">
+                            <p id="how-button__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                        </div>
+
+                        <button class="made-section__button"  type="button" onclick="howButton()" >Read more &nbsp;
                             <svg class="" width="7px" height="8px">
                                 <use href="./images/icons-svg-how.svg#icon-Vector-1"></use>
         
@@ -93,35 +71,35 @@
                 <section class="third-section quantity">
                     <div class="quantity__container">
                         <ul class="quantity__list">
-                            <li class="quantity__item">
-                                <div class="quantity__svg-container">
+                            <li class="quantity__item quantity__item--margin">
+                                <!-- <div class="quantity__svg-container"> -->
                                     <svg class="quantity__svg" width="33px" height="50px">
-                                        <use href="/src/images//icons-svg-how.svg#icon-Group-1"></use>
+                                        <use href="/src/images//icons-svg-how.svg#icon-Group-5"></use>
         
                                     </svg>
                                     <p class="quantity__title">721</p>
                                     <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                                </div>
+                                <!-- </div> -->
                             </li>
                             <li class="quantity__item">
-                                <div class="quantity__svg-container">
-                                    <svg class="quantity__svg" width="33px" height="50px">
-                                        <use href="/src/images/icons-svg-how.svg#icon-Group-2"></use>
+                                <!-- <div class="quantity__svg-container"> -->
+                                    <svg class="quantity__svg" width="50px" height="50px">
+                                        <use href="/src/images/icons-svg-how.svg#icon-apples"></use>
         
                                     </svg>
                                     <h3 class="quantity__title">16kg</h3>
                                     <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                                </div>
+                                <!-- </div> -->
                             </li>
                             <li class="quantity__item">
-                                <div class="quantity__svg-container">
-                                    <svg class="quantity__svg" width="33px" height="50px">
-                                        <use href="/src/images/icons-svg-how.svg#icon-Group-3"></use>
+                                <!-- <div class="quantity__svg-container"> -->
+                                    <svg class="quantity__svg" width="44px" height="50px">
+                                        <use href="/src/images/icons-svg-how.svg#icon-Group-6"></use>
         
                                     </svg>
                                     <h3 class="quantity__title">84</h3>
                                     <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                                </div>
+                                <!-- </div> -->
                             </li>
                         </ul>
                     </div>
@@ -129,7 +107,7 @@
             </div>
         </section>
     </main>
-    <script src="/js/modal.js"></script>
+    <script src="/js/how-button.js"></script>
 </body>
 
 </html>
