--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -1,192 +1,20 @@
-.is-hidden {
-	visibility: hidden;
-	opacity: 0;
-	transform: scale(0,1);
-	pointer-events: none;
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+p,h1,h2,h3{
+	margin: 0;
 }
 
-.modal {
-	background: rgba(0, 0, 0, 0.2);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: 99;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    // &__span-terms {
-	// 	color: #2196F3;
-	// }
-
-	&__button-submit{
-		font-size: 16px;
-		line-height: 26px;
-		text-align: center;
-		letter-spacing: 0.03em;
-		background: #F5F4FA;
-		border: 0;
-		border-radius: 4px;
-		padding: 6px 22px;
-		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		color: #fff;
-		background: #2196F3;
-		padding: 10px 80px;
-		margin: 0 auto;
-		display: block;
-	}
-
-	&__div{
-		width: 528px;
-		height: 581px;
-		background: #FFFFFF;
-		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-		border-radius: 4px;
-		position: relative;
-		transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		padding: 40px;
-	}
-
-	&__close-button-position{
-		width: 30px;
-		height: 30px;
-		background: #FFFFFF;
-		border: 1px solid rgba(0, 0, 0, 0.1);
-		border-radius: 50%;
-		top: 8px;
-		right: 8px;
-		position: absolute;
-		transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	}
-
-	&__close-button {
-		top: 17px;
-		right: 17px;
-		width: 11px;
-		height: 11px;
-	}
-
-	&__elements {
-		width: 448px;
-		margin: 0px auto;
-		position: relative;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-	}
-
-	&__title {
-		position: relative;
-		height: 23px;
-		font-style: normal;
-		font-weight: 700;
-		font-size: 20px;
-		line-height: 23px;
-		text-align: center;
-		letter-spacing: 0.03em;
-		padding-bottom: 12px;
-	}
-
-	&__terms-svg {
-		width: 16px;
-		height: 16px;
-		opacity: 0;
-		fill: #FFFFFF;
-	}
-
-	&__form-item {
-		display: flex;
-		flex-direction: column;
-		gap: 4px;
-		position: relative;
-		&:focus-within {
-			svg {
-				use {
-					fill: #2196F3;
-					transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-				}
-			}
-		}
-	}
-
-	&__text {
-		font-style: normal;
-		font-weight: 400;
-		font-size: 12px;
-		line-height: 14px;
-		letter-spacing: 0.01em;
-		// color: $color_3;
-		padding-bottom: 4px;
-	}
-
-	&__text-terms {
-		font-style: normal;
-		font-weight: 400;
-		font-size: 12px;
-		line-height: 14px;
-		letter-spacing: 0.01em;
-		// color: $color_3;
-		padding-bottom: 4px;
-		font-size: 14px;
-		line-height: 24px;
-		letter-spacing: 0.03em;
-	}
-	li {
-		p.modal__text-terms {
-			display: inline-block;
-			vertical-align: middle;
-		}
-	}
-
-	&__input-dimensions {
-		width: 448px;
-		height: 40px;
-		border: 1px solid rgba(33, 33, 33, 0.2);
-		border-radius: 4px;
-		margin-bottom: 10px;
-		position: relative;
-		cursor: pointer;
-		padding-left: 42px;
-		&:focus {
-			outline: none;
-			border: 1px solid #2196F3;
-			border-radius: 4px;
-			transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		}
-	}
-
-	&__textarea {
-		width: 448px;
-		height: 40px;
-		border: 1px solid rgba(33, 33, 33, 0.2);
-		border-radius: 4px;
-		margin-bottom: 10px;
-		position: relative;
-		cursor: pointer;
-		width: 488px;
-		height: 120px;
-		font-weight: 400;
-		font-size: 14px;
-		line-height: 16px;
-		letter-spacing: 0.01em;
-		// color: $color_5;
-		&:focus {
-			outline: none;
-			border: 1px solid #2196F3;
-			border-radius: 4px;
-			transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		}
-	}
-
+.how_button{
+	display: none;
 }
 
-.modal--terms {
-	padding-bottom: 20px;
-	flex-direction: row;
-	gap: 7px;
-}
+#how-button__text {
+    width: 114px;
+    font-size: 8px;
+    font-size: 14px;
+    line-height: 194%;
+    color: $gray-color;
+    display: none;
+	width: auto;
+  }
 
 
 .made{
@@ -219,8 +47,8 @@
 }
 
 .made-section{
-    background: url(/src/images/made-background-M-1x.png);
-	background-repeat: no-repeat;
+    // background: url(/src/images/made-background-M-1x.png);
+	// background-repeat: no-repeat;
 	background-color: $secondary-background-color;
     font-family: 'DM Sans';
     font-style: normal;
@@ -242,6 +70,7 @@
         letter-spacing: 0.04em;
         text-align: left;
         display: flex;
+		position: relative;
         flex-direction: column;
         // align-items: start;
     }
@@ -267,10 +96,17 @@
 
 .made-section__text--text1{
     
-    font-size: 16px;
-    line-height: 176%;
-    color: $black-color;
-    padding-top: 90px;
+    // font-size: 16px;
+    // line-height: 176%;
+    // color: $black-color;
+    // padding-top: 90px;
+	width: 220px;
+
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 162%;
+	color: #000000;
+	
 }
 
 .made-section__text--text2{
@@ -278,6 +114,21 @@
     font-size: 14px;
     line-height: 194%;
     color: $gray-color;
+	width: 220px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 162%;
+	color: #907E82;
+	
+}
+
+.made-section__background-container{
+	background: url(/src/images/made-background-M-1x.png);
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 280px;
+	height: 133px;
+	bottom: 376px;
 }
 
 .made-section__text--text3{
@@ -285,6 +136,11 @@
     font-size: 14px;
     line-height: 194%;
     color: $gray-color;
+	width: 220px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 162%;
+	color: #907E82;
 }
 
 .container{
@@ -302,25 +158,27 @@
         margin: 0px;
 		padding: 0px;
         padding-bottom: 209px;
+		gap: 32px;
         
     }
 
     &__item{
         font-style: normal;
         text-align: left;
+		display: flex;
+        flex-direction: column;
     }
 
-    &__svg-container{
-        display: flex;
-        flex-direction: column;
-        // align-items: start;
-    }
+    // &__svg-container{
+        
+
+    // }
 
     &__svg{
         fill: $svg-background;
-        width: 33px;
-        height: 50px;
+
         margin-bottom: 40px;
+		display: inline-block;
     }
 
     &__title{
@@ -366,12 +224,25 @@
 	.made-section__image{
 		width: 336px;
 	}
+
+	.made-section__text--text2{
+
+	background: none;
+		
+	}
+
 	.quantity__list{
 		margin: 0px;
 		padding: 0px;
 		display: flex;
     	flex-direction: row;
+		gap: 4px;
 	}
+
+	#how-button__text {
+		display: none;
+		width: auto;
+	  }
 
 }
 
@@ -395,12 +266,28 @@
 		align-items: center;
 	}
 
+	.made-section__text--text2{
+		background: none;
+	}
+
 	.made-section__text--text3{
 		padding-bottom: 40px;
 	}
 	.quantity__list{
 		flex-direction: row;
+		gap: 60px;
 	}
+
+	.quantity__item--margin
+	{
+		margin-right: 55px;
+	}
+
+	#how-button__text {
+		display: none;
+		width: auto;
+	  }
+
 }
 
 @media screen and (min-device-pixel-ratio: 2),
