--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -131,7 +131,7 @@
       <ul class="footer-title__list unstyled-list">
         <li class="footer-title__itmes"><p>HOMEMADE ICE CREAM MADE</p></li>
         <li class="footer-title__itmes footer-title--second">
-          <p>HITH PASSION</p>
+          <p>WITH PASSION</p>
         </li>
       </ul>
       <div class="svg-section">
@@ -152,7 +152,7 @@
           </li>
           <li>
             <a class="svg-footer__items" href="https://www.facebook.com/">
-              <svg width="9.35px" height="20.4px">
+              <svg width="15px" height="20px">
                 <use href="/src/images/icons-footer.svg#facebook1"></use>
               </svg>
             </a>
