--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="header container">
+<header class="header ">
    
   <div class="container-header ">
     <a class="header-logo" href="/src/index.html">
@@ -38,7 +38,7 @@
       </svg></span>
     </button>
   </div>
-</header>
+
 
 <!-- Hero -->
 
@@ -107,3 +107,4 @@
     </picture>
   </div>
 </section>
+</header>
