11 - fonturi texte 3 dispozitive

--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -18,30 +18,29 @@ p,h1,h2,h3{
 
 
 .made{
-    font-style: normal;
-   font-weight: 400;
-   text-align: center;
-   text-transform: uppercase;
-   margin: 0px auto;
-   position: relative;
-   background-color: $secondary-background-color;
+		font-style: normal;
+		font-weight: 400;
+		text-align: center;
+		text-transform: uppercase;
+		margin: 0px auto;
+		position: relative;
+		background-color: $secondary-background-color;
 
    &__subtitle{
-   font-family: 'Titan One';
-   line-height: 34px;
-   font-size: 30px;
-   letter-spacing: 0.04em;
-   color: $secondary-color;
-   margin: 0px;
-   padding-top: 60px;
+		font-family: 'Titan One';
+		font-size: 18px;
+		line-height: 21px;
+		color: $secondary-color;
+		margin: 0px;
+		padding-top: 60px;
    }
 
    &__title{
-   font-family: 'Titan One';
-   font-size: 58px;
-   line-height: 66px;
-   letter-spacing: 0.06em;
-   color: $primary-color;
+		font-family: 'Titan One';
+		font-size: 34px;
+		line-height: 39px;
+		letter-spacing: 0.04em;
+		color: $primary-color;
    }
    
 }
@@ -55,11 +54,6 @@ p,h1,h2,h3{
 	padding-bottom: 40px;
     
 	// flex-direction: column;
-
-
-    // &__divimage{
-    //    margin-right: 99px;
-    // }
 
     &__image{
 		width:280px;
@@ -82,8 +76,8 @@ p,h1,h2,h3{
         border-radius: 22px;
         border-color: $white-color;
         font-weight: 700;
-        font-size: 16px;
-        line-height: 21px;
+        font-size: 14px;
+        line-height: 18px;
         align-items: center;
         text-align: center;
         color: $primary-color;
@@ -101,11 +95,10 @@ p,h1,h2,h3{
     // color: $black-color;
     // padding-top: 90px;
 	width: 220px;
-
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-	color: #000000;
+	color: $black-color;
 	
 }
 
@@ -118,7 +111,7 @@ p,h1,h2,h3{
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-	color: #907E82;
+	color: $gray-color;
 	
 }
 
@@ -140,7 +133,7 @@ p,h1,h2,h3{
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 162%;
-	color: #907E82;
+	color: $gray-color;
 }
 
 .container{
@@ -169,10 +162,6 @@ p,h1,h2,h3{
         flex-direction: column;
     }
 
-    // &__svg-container{
-        
-
-    // }
 
     &__svg{
         fill: $svg-background;
@@ -184,21 +173,20 @@ p,h1,h2,h3{
     &__title{
         font-family: 'Titan One';
         font-weight: 400;
-        font-size: 58px;
-        line-height: 66px;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
+		font-size: 36px;
+		line-height: 41px;
+		letter-spacing: 0.04em;
+		text-transform: uppercase;
         color: $primary-color;
-        text-align: left;
-        margin: 0px;
+        // text-align: left;
+        // margin: 0px;
     }
 
     &__text{
         font-family: 'DM Sans';
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 28px;
-        letter-spacing: 0.02em;
+		font-weight: 700;
+		font-size: 12px;
+		line-height: 170%;
         color: $black-color;
         // text-align: left;
     }
@@ -212,6 +200,19 @@ p,h1,h2,h3{
 		margin: 0px auto;
 		background-color: $secondary-background-color;
 	}
+
+	.made{
+		&__subtitle{
+			font-size: 26px;
+			line-height: 30px;
+		}
+		&__title{
+			font-size: 48px;
+			line-height: 55px;
+			letter-spacing: 0.04em;
+		}
+
+	}
 	
 	.made-section{
 		background: none;
@@ -221,14 +222,38 @@ p,h1,h2,h3{
 
 	}
 
+	.made-section__button{
+	font-size: 16px;
+	line-height: 21px;
+	}
+
 	.made-section__image{
 		width: 336px;
 	}
 
-	.made-section__text--text2{
+	.made-section__text--text1 ,
+	.made-section__text--text2 ,
+	.made-section__text--text3
+	{
+		font-size: 14px;
+		line-height: 176%;
+	}
 
-	background: none;
+	.made-section__button{
+		font-size: 16px;
+		line-height: 21px;
+		}
 		
+	.quantity{
+		&__title{
+			font-size: 48px;
+			line-height: 55px;
+
+		}
+		&__text{
+			font-size: 14px;
+			line-height: 174%;
+		}
 	}
 
 	.quantity__list{
@@ -254,6 +279,18 @@ p,h1,h2,h3{
 		background-color: $secondary-background-color;
 	}
 
+
+	.made{
+		&__subtitle{
+			font-size: 30px;
+			line-height: 34px;
+		}
+		&__title{
+			font-size: 58px;
+			line-height: 66px;
+		}
+	}
+
 	.made-section {
 		background: url(../images/made-background-D-1x.png);
     	background-repeat: no-repeat;
@@ -266,16 +303,45 @@ p,h1,h2,h3{
 		align-items: center;
 	}
 
-	.made-section__text--text2{
-		background: none;
+	.made-section__text--text1
+	{
+		font-size: 16px;
+		line-height: 176%;
+	}
+
+	.made-section__text--text2 ,
+	.made-section__text--text3
+	{
+		font-size: 14px;
+		line-height: 194%;
 	}
 
 	.made-section__text--text3{
 		padding-bottom: 40px;
 	}
+
+	.made-section__button{
+		font-size: 16px;
+		line-height: 21px;
+		}
+
 	.quantity__list{
 		flex-direction: row;
 		gap: 60px;
+	}
+
+	.quantity{
+		&__title{
+			font-size: 58px;
+			line-height: 66px;
+			text-align: right;
+
+		}
+		&__text{
+			font-size: 16px;
+			line-height: 176%;
+			letter-spacing: 0.02em;
+		}
 	}
 
 	.quantity__item--margin
